<resources>
    <string name="app_name">Pharmacy Job</string>
    <string name="title_availablejob">Available Jobs</string>
    <string name="title_myjob">My Jobs</string>
    <string name="title_myfavorite">My Favorite</string>
    <string name="title_profile">My Profile</string>
    <string name="title_negotiation">Under Negotiation</string>
    <string name="title_jobdetail">Job Detail</string>
    <string name="text_fav">Favorite Icon</string>
    <string name="text_create_account">Don\'t have an account? Create one!</string>
    <string name="text_forgot_password">Forgot your password? Click here!</string>
    <string name="address_format">%1$s\n%2$s\n%3$s</string>
    <string name="date_time_format">%1$s / %2$s - %3$s</string>
    <string name="hourly_rate_format">£%1$s/hr</string>
    <string name="total_paid_format">Total: £%1$s</string>
    <string name="api_get_success">Retrieve data successful</string>
    <string name="api_get_fail">Failed to retrieve data</string>
    <string name="api_update_success">Update successful</string>
    <string name="api_update_fail">Failed to update data</string>
    <string name="job_status_apply">Apply</string>
    <string name="job_status_withdraw">Withdraw</string>
    <string name="job_status_assigned">Assigned</string>
    <string name="job_status_completed">Completed</string>
    <string name="job_apply_confirmation">Do you really want to apply this job?</string>
    <string name="job_withdraw_confirmation">Do you really want to withdraw this job?</string>
    <string name="negotiate_status_new">New</string>
    <string name="negotiate_new_confirmation">Please input your purposed hourly rate:</string>
    <string name="negotiate_new_reason">Reason:</string>
    <string name="negotiate_new_error">Invalid purposed hourly rate!!</string>
    <string name="negotiate_new_input">Your purposed total paid is:</string>
    <string name="negotiation_action_accept">Accept</string>
    <string name="negotiation_status_new">New</string>
    <string name="negotiation_status_admin_accept">Admin Accepted</string>
    <string name="negotiation_status_reject">Admin Rejected</string>
    <string name="negotiation_status_counter">Counter Purposed</string>
    <string name="negotiation_status_pharmacist_accept">Pharmacist Accepted</string>
    <string name="negotiation_status_picked">Job Picked by others</string>
    <string name="negotiation_accept_confirmation">Do you really want to accept this hourly rate?</string>
</resources>
